--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
-$white-color: #f0f0f0;
-$black-color: #000000;
-$red-color: #b92f2c;
+--white-color: #f0f0f0;
+--black-color: #000000;
+--red-color: #b92f2c;
 
 $mob: 320px;
 $tab: 768px;
