--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -1,32 +1,32 @@
 .btn-pagination {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .btn-pagination-back,
-.btn-pagination-forward  {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    background-color: #F7F7F7;
-    border-radius: 5px;
-    transform: matrix(-1, 0, 0, 1, 0, 0);
-    cursor: pointer;
+.btn-pagination-forward {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+  cursor: pointer;
 }
 
 .btn-pagination-current {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 133%;
-    color: $white-color;
-    background-color: $red-color;
-    border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 133%;
+  color: $white-color;
+  background-color: $red-color;
+  border-radius: 5px;
 }
