--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,61 +1,121 @@
+.movie__modal.active,
+.backdrop-about.active{
+   opacity: 1;
+   visibility: visible;
+}
+
+ /* Модалка оформлення */
+  
+ .movie__modal {
+   min-width: 240px;
+   /* width: 100%; */
+   height: auto;
+   /* max-width: 280px; */
+   padding: 40px 20px 40px 20px;
+
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   z-index: 30; 
+  
+   display: block; 
+   text-align: center;
+   color: #131313;  
+   background-color: #ffffff;
+   border-radius: 10px;
+       
+   /* transition: transform 250ms ease-in-out; */
+   
+
+   @media screen and (min-width: 768px) {
+      min-width: 704px;
+      padding: 40px 72px auto 36px;
+   }
+   
+    @media screen and (min-width: 1280px) {
+       min-width: 808px;
+       padding: 40px 12px 40px 12px;
+       }
+       &.is-hidden {
+                opacity: 0;
+                pointer-events: none;
+        
+            }    
+   }
 
 img {
     width: 240px;
-    height: auto;
-    @media screen and (min-width: 768px) {
+    margin-bottom: 20px;
+      @media screen and (min-width: 768px) {
       width: 264px;
       }
       @media screen and (min-width: 1280px) {
         width: 375px;
     }
-   
   }
-  
+
+//   Кнопки
   
   button {
-  
-    cursor: pointer;
-    color: #B92F2C;
+    color: $red-color;
     background-color: #ffffff;
-    margin: auto;
+    // margin: auto;
+    border: 1px solid #000000;
     border-radius: 100px;
-    font-family: Roboto;
     font-weight: 500;
     font-size: 12px;
     line-height: 14.06px;
-    padding: 10px 12px;
-    min-width: 111px;
-    /* height: 34px; */
+    padding: 10px 14px;
+    width: 113px;
+    height: 34px;
     @media screen and (min-width: 768px){
-      padding: 14px auto;
-    min-width: 120px;
+     height: 38px;
+     padding: 12px 18px;
+     width: 121px;
     }
     @media screen and (min-width: 768px){
+        height: 42px;
       padding: 14px 24px;
-    min-width: 120px;
+      width: 134px;
     }
-    
   }
-  
+
+  .movie__add {
+    color: #ffffff;
+    background-color: $red-color;
+    padding: 10px 12px;
+    width: 127px;
+    margin-right: 10px;
+    @media screen and (min-width: 768px){
+      padding: 12px 18px;
+      width: 140px;
+    }
+    @media screen and (min-width: 768px){
+      padding: 14px 32px;
+      width: 167px;
+    }
+  }
+
+
   .movie__close {
-    padding: 0;
-    width: 30px;
-    cursor: pointer;
-    background-color: #ffffff;
-    margin: auto;
-    border-radius: 50%;
-  }
-  
-  .movie__modal .movie__close {
     position: absolute;
     top: 7px;
-    right: 20px;
-    color: #fff;
-  }
-  .icon-close {
-    fill: #131313;
+    right: 7px;
+
+    width: 30px;
+    height: 30px;
+     padding: 0;
+     border: none;
+    background-color: transparent;
+   
+     }
+  
+    .icon-close {
+      fill: #131313;
   }
   
+
   /* оформлення шрифту */
   
   .movie__modal--title {
@@ -74,24 +134,32 @@ img {
   .info-item--title {
     text-transform: uppercase;
   }
-  
+
+//   рейтинг оформлено як кнопку.
   .vote-average {
+    width: 36px;
+    height: 16px;
     color:  #ffffff;
-    background-color: #B92F2C;
+    background-color: $red-color;
     border-radius: 5px;
-    width: auto;
     padding: 1px 9px;
   }
+
   .overview {
   line-height: 20px;
   margin-bottom: 20px;
-  
   } 
   
   .movie__detals--key {
    color: #8c8c8c;
-  }
-  
+     }
+
+  .info-item,
+  .info-key,
+  .info-item--title {
+    margin-bottom: 8px;
+   }
+
   .movie__about--modal {
     margin-bottom: 20px;
   }
@@ -99,25 +167,22 @@ img {
   
      .movie__card {
    text-align: start; 
-   justify-content: center; 
-     display: block;
+//    justify-content: center; 
+    //  display: block;
       list-style: none;
-      font-family: Roboto;
       font-weight: 500;
       font-size: 12px;
       line-height: 16px;
-      @media screen {
-        
-      }
-      @media screen and (min-width: 786px) {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 68px;
-      }
+@media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+}
       @media screen and (min-width: 1280px) {
           gap: 16px;
     }
   }
+
     .movie__detals {
       /* justify-content: center; */
      display: flex;
@@ -133,47 +198,41 @@ img {
       }
     }
   
-    /* Модалка оформлення */
-  
-    .movie__modal {
-       /* opacity: 0;
-       visibility: hidden; */
-      min-width: 240px;
-      /* width: 100%; */
-      height: auto;
-      /* max-width: 280px; */
-      padding: 20px 40px 20px 40px;
-  
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 30; 
-     
-      display: block; 
-      text-align: center;
-      color: #131313;  
-      background-color: #ffffff;
-      border: 2px solid #F8D24E;
-      border-radius: 10px;
-          
-      /* transition: transform 250ms ease-in-out; */
-      
-  
-      @media screen and (min-width: 768px) {
-        display: flex;
-          max-width: 704px;
-        
-          padding: 23px 40px 84px auto;
-      
-      }
-      
-       @media screen and (min-width: 1280px) {
-        display: flex; 
-        max-width: 806px;
-       
-          padding: 12px 40px 12px auto;
-          }
-      }
-  
    
+   
+// .video {
+//     width: 100%
+//     height: auto
+//     @media screen and (min-width: 768px) {
+//         width: 448px;
+//         height: 205px;
+//         margin-bottom: 32px;
+// }
+// }
+
+// .backdrop-about {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(0, 0, 0, .2);
+//     z-index: 20;
+//     transition: .3s all;
+     
+//     // transition: opacity 250ms linear,
+//     //     visibility 250ms linear;
+
+//   &.is-hidden {
+//         opacity: 0;
+//         pointer-events: none;
+
+//     }    
+// }
+
+// .movie__modal.is-open {
+//     opacity: 1;
+//     visibility: visible;
+// }
+//     // transform: translateX(0);
+// // }
