--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,5 +1,9 @@
 <ul class="btn-pagination">
-    <li class="btn-pagination-back"><img src="./images/arrow-right.svg" width=16px height=16px /></li>
-    <li class="btn-pagination-current">1</li>
-    <li class="btn-pagination-forward"><img src="./images/arrow-left.svg" width=16px height=16px /></li>
+  <li class="btn-pagination-back">
+    <img src="./images/arrow-right.svg" width="16px" height="16px" />
+  </li>
+  <li class="btn-pagination-current">1</li>
+  <li class="btn-pagination-forward">
+    <img src="./images/arrow-left.svg" width="16px" height="16px" />
+  </li>
 </ul>
