--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -2,16 +2,18 @@
   <div class="container">
     <div class="container-nav">
       <form class="form">
-        <input class="header_search-input" 
-               placeholder="Movie search"
-               name="search" 
-               autocomplete="off" 
-               type="text" />
-               <button class="header_search-btn" type="submit">
-                <svg class="header_search-btn_icon" width="16px" height="16px">
-                  <use href="/src/images/sprite.svg#search-lg"></use>
-                </svg>
-              </button>
+        <input
+          class="header_search-input"
+          placeholder="Movie search"
+          name="search"
+          autocomplete="off"
+          type="text"
+        />
+        <button class="header_search-btn" type="submit">
+          <svg class="header_search-btn_icon" width="16px" height="16px">
+            <use href="/src/images/sprite.svg#search-lg"></use>
+          </svg>
+        </button>
       </form>
 
       <nav>
@@ -24,14 +26,6 @@
           </li>
         </ul>
       </nav>
-      <form>
-        <div class="form">
-          <input type="text" name="search" placeholder="Movie search" />
-          <button type="submit">
-            <span class="search-icon"></span>
-          </button>
-        </div>
-      </form>
 
       <ul class="add-films">
         <li><a href="" class="add-films-watched">Watched</a></li>
