--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<button type="submit">ТИМЧАСОВО для запуску модалки</button>
+<button type="submit" class="film-modal">ТИМЧАСОВО для запуску модалки</button>
 <div class="container">
   <div class="movie__modal is-hidden" data-modal-about>
     <button class="movie__close" data-modal-about-close>
@@ -72,4 +72,4 @@ allow="autoplay; encrypted-media"
   </div>
 </div>
 
-<script defer type="module" src="./modal.js"></script>
+<script defer type="module" src="./js/modal.js"></script>
