--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -2,16 +2,18 @@
   <div class="container">
     <div class="container-nav">
       <form class="form">
-        <input class="header_search-input" 
-               placeholder="Movie search"
-               name="search" 
-               autocomplete="off" 
-               type="text" />
-               <button class="header_search-btn" type="submit">
-                <svg class="header_search-btn_icon" width="16px" height="16px">
-                  <use href="/src/images/sprite.svg#search-lg"></use>
-                </svg>
-              </button>
+        <input
+          class="header_search-input"
+          placeholder="Movie search"
+          name="search"
+          autocomplete="off"
+          type="text"
+        />
+        <button class="header_search-btn" type="submit">
+          <svg class="header_search-btn_icon" width="16px" height="16px">
+            <use href="/src/images/sprite.svg#search-lg"></use>
+          </svg>
+        </button>
       </form>
 
       <nav>
