--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -12,7 +12,7 @@
         href="http://image.tmdb.org/t/p/w300/${backdrop_path}"
       >
         <img
-          src="./images/Rectangle 18.png"
+          src="./images/Rectangle.png"
           alt="${original_title}"
           loading="lazy"
         />
