--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
 
-  <button type="submit">ТИМЧАСОВО для запуску модалки</button>
+  <button type="submit" data-modal-about-open>ТИМЧАСОВО для запуску модалки</button>
 <div class="container">
        <div class="movie__modal is-hidden" data-modal-about>
         <button class="movie__close"  data-modal-about-close>
