--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -5,8 +5,8 @@
 <div class="container">
   <div class="movie__modal is-hidden" data-modal-about>
     <button class="movie__close" data-modal-about-close>
-      <svg class="icon-close" width="14" height="14">
-        <use href="./images/sprite.svg#icon-Vectorclose"></use>
+      <svg class="icon-close" width="30" height="30">
+        <use href="./images/sprite.svg#close"></use>
       </svg>
     </button>
     <div class="movie__card">
