--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,9 +1,11 @@
-<ul class="btn-pagination">
-  <li class="btn-pagination-back">
-    <img src="./images/arrow-right.svg" width="16px" height="16px" />
+<ul class="pagination">
+  <li class="btn-left">
+    <img class="icon-arrow" src="./images/arrow-left.svg"/> 
   </li>
-  <li class="btn-pagination-current">1</li>
-  <li class="btn-pagination-forward">
-    <img src="./images/arrow-left.svg" width="16px" height="16px" />
+  <li class="pagination-number first-left"></li>
+  <li class="pagination-number current">1</li>
+  <li class="pagination-number first-right">2</li>
+  <li class="btn-right">
+    <img class="icon-arrow" src="./images/arrow-right.svg"/>
   </li>
 </ul>
