--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -7,6 +7,8 @@
     }
 
     @media screen and (min-width: 1280px) {
+        display: flex;
+        flex-wrap: wrap;
         width: 1280px;
         gap: 16px;
     }
