--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -1,22 +1,9 @@
 <header class="header">
-  <div class="container">
-    <div class="container-nav">
-      <form class="form">
-        <input
-          class="header_search-input"
-          placeholder="Movie search"
-          name="search"
-          autocomplete="off"
-          type="text"
-        />
-        <button class="header_search-btn" type="submit">
-          <svg class="header_search-btn_icon" width="16px" height="16px">
-            <use href="/src/images/sprite.svg#search-lg"></use>
-          </svg>
-        </button>
-      </form>
+  <div class="header-container">
+    
+      
 
-      <nav>
+      <nav
         <ul class="nav">
           <li class="nav-item home">
             <a href="./index.html">Home</a>
@@ -26,20 +13,34 @@
           </li>
         </ul>
       </nav>
+
+      <form class="form">
+        <input class="header_search-input" 
+               placeholder="Movie search"
+               name="search" 
+               autocomplete="off" 
+               type="text" />
+               <button class="header_search-btn" type="submit">
+                <svg class="header_search-btn_icon" >
+                  <use href="/src/images/sprite.svg#search-lg"></use>
+                </svg>
+              </button>
+      </form>
+
+      <div class="header-logo">
+        <a class="header_logo-link" href="/src/index.html">
+          <svg class="header_logo-icon">
+            <use href="/src/images/sprite.svg#film-lg"></use>
+          </svg>
+          <span class="header-nav_logo-text">Filmoteka</span>
+        </a>
+      </div>
+      
+
       <ul class="add-films">
         <li><a href="#" class="add-films-watched">Watched</a></li>
         <li><a href="#" class="add-films-queue">queue</a></li>
       </ul>
-    </div>
-    <div class="container-logo">
-      <a class="header-nav_logo" href="/src/index.html">
-        <svg class="header-nav_logo-icon" width="59" height="59">
-          <use href="/src/images/sprite.svg#film-lg"></use>
-        </svg>
-        <span class="header-nav_logo-text">Filmoteka</span>
-      </a>
-    </div>
-    <!-- <div class="add-films_btn">
-      </div> -->
+    
   </div>
 </header>
