--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,167 +1,218 @@
 .header {
+  margin: 20px;
   text-align: center;
-  background-image: url('/src/images/abstract-background.jpg');
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 65.37%), url('/src/images/background_phone.jpg');
   background-repeat: no-repeat;
+  border-radius: 10px;
+//transform: matrix(-1, 0, 0, 1, 0, 0);
   background-position: center;
   background-size: cover;
-  padding-top: 16px;
-  padding-bottom: 32px;
-
-  //@media screen and (min-width: 768px) {
-  /* background-image: url('/src/images/header/tablet-bi.jpg');*/
-
-  //     }
-
-  //     @media screen and (min-width: 1280px) {
-  //        /* background-image: url('/src/images/header/desktop-bi.jpg');*/
-  //     }
-
-  //     & a{
-  //         text-decoration:none;
-  //     }
-}
-
-.container-nav {
-  display: flex;
-  align-items: center;
-  margin-bottom: 151px;
   
-}
-
-.container-logo {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
- 
-  gap: 16px;
-  margin-left: 32px;
-  margin-top: 209px;
-  margin: 0px;
-  //padding-bottom: 32px;
-}
-
-.header-nav_logo {
-  display: inline-flex;
-  align-items: center;
-  color: $white-color;
-  background-color: transparent;
-  margin: 0;
- // padding: 0;
-  // transition: color $transition-timing $transition-function;
-
- // &:hover,
- //   &:active {
- //  color: rgb(202, 191, 191);
- //  }
-
-   //&:hover .header-nav_logo-icon {
- //   transform: rotate(0.5turn);
-   // fill: #FF001B;
-//}
-
-}
-.header-nav_logo-icon {
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-  fill: $white-color;
-  // transition: transform $transition-timing $transition-function;
-}
-.header-nav_logo-text {
-  font-size: 0;
-  margin: 0;
-  padding: 0;
 
   @media screen and (min-width: 768px) {
-    font-size: 30px;
-    margin-left: 32px;
-    padding-bottom: 32px;
-    padding-left: 107px;
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 64px;
-    line-height: 1.17;
-    color: $white-color;
+    background-image: linear-gradient(273.67deg, rgba(0, 0, 0, 0.49) -2.09%, rgba(0, 0, 0, 0) 99.83%), url('/src/images/background_tablet.jpg');
+    border-radius: 15px;
+    //transform: matrix(-1, 0, 0, 1, 0, 0);
+    margin: 32px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    background-image: linear-gradient(273.67deg, rgba(0, 0, 0, 0.49) -2.09%, rgba(0, 0, 0, 0) 99.83%), url('/src/images/background_desktop.jpg');
+    border-radius: 15px;
+//transform: matrix(-1, 0, 0, 1, 0, 0);
+margin: 12px 32px 52px 32px;
+
+  }
+
+  & a {
+    text-decoration: none;
   }
 }
 
-.logo-text {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 64px;
-  line-height: 1.17;
+.header-container {
+  margin: 0 auto;
+  padding: 14px 14px 24px 14px;
+  height: 460px;
+
+
+  @media screen and (min-width: 768px) {
+    position: relative;
+    width: 768px;
+    padding: 16px;
+    height: 222px;
+  }
+
+  @media screen and (min-width: 1280px) {
+
+    width: 1216px;
+    height: 316px;
+    padding: 16px 32px 32px 32px;
+  }
 }
 
 .form {
-  //display: flex;
   position: relative;
-  width: 187px;
-  height: 42px;
+ 
+  width: 100%;
+  
+  height: 34px;
+  
+
   background: $white-color;
   border-radius: 100px;
-  margin-right: 8px;
-  padding-left: 16px;
-  justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    content: '';
+
+    width: 165px;
+    height: 38px;
+    left: 16px;
+    top: 16px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 187px;
+    height: 42px;
+    left: 32px;
+    top: 16px;
+  }
 }
 
 .header_search-input {
-  // width: 100%;
-  //padding-bottom: 4px;
-  margin: 0;
-  background-color: inherit;
-  border: none;
-  line-height: 1.14;
-  font-size: 14px;
-  color: $white-color;
-  margin-top: 13px;
+  //width: 100%;
+  //display: block;
+  background-color: transparent;
+  width: 252px;
+  height: 100%;
+  padding-left: 14px;
+  //top: 10px;
 
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.67;
+
+  //display: flex;
+
+  color: $black-color;
+  border: none;
   // transition: border-bottom $transition-timing $transition-function;
+
   &:focus-visible {
     outline: none;
+  }
+
+  @media screen and (min-width: 768px) {
+    //width: 85px;
+    // height: 16px;
+    //left: 32px;
+    //top: 27px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+
+  @media screen and (min-width: 1280px) {
+    //width: 84px;
+    //height: 16px;
+    // left: 48px;
+    // top: 29px;
+    font-size: 14px;
+    line-height: 1.14;
   }
 }
 
 .header_search-btn {
-    position: absolute;
-    content: '';
-    right: 13px;
-    bottom: 12px;
-    //transition: border-bottom $transition-timing $transition-function;
-    display: inline-flex;
-    background-color: inherit;
-    border: none;
+  position: absolute;
+  content: '';
+  //padding-right: 14px;
+  //padding-bottom: 10px;
+  width: 14px;
+  height: 14px;
+  right: 14px;
+  bottom: 10px;
+
+  //transition: border-bottom $transition-timing $transition-function;
+  //display: inline-flex;
+  background-color: transparent;
+  border: none;
+
+  @media screen and (min-width: 768px) {
+    right: 16px;
+    bottom: 11px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    right: 16px;
+    bottom: 13px;
+  }
 }
 
 .header_search-btn_icon {
-    height: 100%;
-    fill: $black-color;
-    //transition: transform $transition-timing $transition-function;
-    &:hover {
-        transform: scale(1.15);
-    }
-}
+  width: 14px;
+  height: 14px;
+  // color: $black-color;
+  fill: $black-color;
+  //transition: transform $transition-timing $transition-function;
 
+  // &:hover {
+  //   transform: scale(1.15);
+  // }
+
+  @media screen and (min-width: 768px) {
+    width: 16px;
+    height: 16px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 16px;
+    height: 16px;
+  }
+}
 
 .nav {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 0px;
-  gap: 8px;
+  margin-bottom: 8px;
+  gap: 4px;
+
+  // position: absolute;
+  // width: 204px;
+  // height: 34px;
+  // left: 14px;
+  // top: 14px;
+
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    content: '';
+    top: 16px;
+    left: 185px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    
+     left: 227px;
+   
+    padding: 0px;
+    gap: 8px;
+  }
 }
+
 .nav-item.home {
-  width: 99px;
-  height: 42px;
+  display: flex;
+  flex-direction: row;
+  padding: 10px 26px;
+  gap: 10px;
+
+  width: 87px;
+  height: 34px;
+
   font-family: 'Roboto';
+  font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
-  padding-top: 14px;
 
   align-items: center;
   text-align: center;
@@ -171,53 +222,91 @@
 
   background: $white-color;
   border-radius: 100px;
+
+  @media screen and (min-width: 768px) {
+    padding: 12px 24px;
+    width: 83px;
+    height: 38px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding: 14px 32px;
+
+    width: 99px;
+    height: 42px;
+  }
 }
+
 .nav-item.library {
+  padding: 10px 22px;
+
+  width: 113px;
+  height: 34px;
+
+  background: $black-color;
+  border-radius: 100px;
+
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
 
+  display: flex;
+  align-items: center;
+  text-align: center;
   text-transform: uppercase;
 
   color: $white-color;
-  width: 117px;
-  height: 42px;
-  padding-top: 14px;
-  background: $black-color;
-  border-radius: 100px;
+
+  @media screen and (min-width: 768px) {
+    padding: 12px 20px;
+
+    width: 109px;
+    height: 38px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding: 14px 24px;
+
+    width: 117px;
+    height: 42px;
+  }
 }
 
 .add-films {
   display: flex;
-  margin-left: auto;
   align-items: center;
   justify-content: center;
+  gap: 4px;
+  margin-top: 16px;
 
-  gap: 8px;
+  @media screen and (min-width: 768px) {
+    //position: absolute;
+    //content: '';
+   // right: 32px;
+  //  top: 16px;
+  margin: 0;
+ justify-content: left;
+  margin-left: 480px;
+   
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin-left: 938px;
+    gap: 8px;
+  }
 }
 
 .add-films-watched {
-  width: 120px;
-  height: 42px;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
+  padding: 10px 23px;
+  width: 102px;
+  height: 34px;
 
-
+  display: flex;
+  align-items: center;
+  text-align: center;
   text-transform: uppercase;
-  padding: 14px 32px;
-  background: $white-color;
-  border-radius: 100px;
-  color: $red-color;
-}
-
-.add-films-queue {
-  width: 86px;
-  height: 42px;
 
   font-family: 'Roboto';
   font-style: normal;
@@ -225,10 +314,159 @@
   font-size: 12px;
   line-height: 1.17;
 
-  padding: 14px 24px;
   background: $red-color;
   box-shadow: 0px 0px 7px rgba(27, 27, 27, 0.15);
   border-radius: 100px;
-  text-transform: uppercase;
   color: $white-color;
+
+  &:hover,
+    &:focus {
+        background-color: $white-color;
+        color: $red-color;
+        
+    }
+
+    
+
+  @media screen and (min-width: 768px) {
+    padding: 12px 23px;
+    height: 38px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding: 14px 32px;
+    width: 120px;
+    height: 42px;
+  }
+}
+
+.add-films-queue {
+  padding: 10px 24px;
+  width: 86px;
+  height: 34px;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+
+  background: $white-color;
+  border-radius: 100px;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+
+  color: $red-color;
+
+  &:hover,
+  &:focus {
+      background-color: $red-color;
+      color: $white-color;
+      
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 12px 24px;
+    height: 38px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding: 14px 24px;
+    height: 42px;
+  }
+}
+
+//$transition-timing: 250ms;
+//$transition-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+.header-logo {
+  margin-top: 258px;
+  // position: relative;
+  //display: flex;
+
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    content: '';
+    left: 16px;
+    bottom: 16px;
+    margin: 0;
+  }
+
+  @media screen and (min-width: 1280px) {
+    left: 32px;
+    bottom: 32px;
+  }
+}
+
+.header_logo-link {
+  // display: flex;
+  align-items: center;
+  // position: relative;
+  // content: "";
+  // left: 5px;
+  // top: 5px;
+  // display: inline-flex;
+  // align-items: center;
+  // margin: 0;
+  //color: $white-color;
+  //background-color: transparent;
+
+  // transition: color $transition-timing $transition-function;
+
+  // &:hover,
+  //   &:active {
+  //  color: rgb(202, 191, 191);
+  //  }
+
+  //&:hover .header_logo-icon {
+  //   transform: rotate(0.5turn);
+  // fill: #FF001B;
+  //}
+}
+
+.header_logo-icon {
+  width: 32px;
+  height: 32px;
+
+  // position: absolute;
+  //  content: "";
+  //  left: 5px;
+  //  top: 5px;
+  //fill: $white-color;
+  // transition: transform $transition-timing $transition-function;
+
+  @media screen and (min-width: 768px) {
+    width: 32px;
+  height: 32px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 59px;
+  height: 59px;
+  
+  }
+
+}
+
+.header-nav_logo-text {
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 1.18;
+
+  color: $white-color;
+
+  @media screen and (min-width: 768px) {
+    font-size: 40px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    
+    font-size: 64px;
+  }
 }
