--- a/src/partials/pagination_2.html
+++ b/src/partials/pagination_2.html
@@ -1,7 +1,5 @@
-<div class="pagination-wrap flex">
-  <a class="pagination-prev disabled" href="#">
-  </a>
-  <ul class="pagination-layout"></ul>
-  <a class="pagination-next" href="#">
-  </a>
-</div>
+<section class="library__gallery">
+  <h1 hidden>Movie library</h1>
+  <div class="library__container container"></div>
+  <ul class="library__pagination"></ul>
+</section>
