--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,6 @@
-
-
-  <button type="submit" data-modal-about-open>ТИМЧАСОВО для запуску модалки</button>
+<button type="submit" data-modal-about-open>
+  ТИМЧАСОВО для запуску модалки
+</button>
 
 <div class="container">
   <div class="movie__modal is-hidden" data-modal-about>
@@ -9,7 +9,6 @@
         <use href="./images/sprite.svg#close"></use>
       </svg>
     </button>
-    
   </div>
 </div>
 
