--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,11 +1,15 @@
 <ul class="pagination">
   <li class="btn-left">
-    <img class="icon-arrow" src="./images/arrow-left.svg"/> 
+    <svg class="btn-left" width="16" height="16">
+      <use href="./images/sprite.svg#arrow-left"></use>
+    </svg>
   </li>
   <li class="pagination-number first-left"></li>
   <li class="pagination-number current">1</li>
   <li class="pagination-number first-right">2</li>
   <li class="btn-right">
-    <img class="icon-arrow" src="./images/arrow-right.svg"/>
+    <svg class="btn-right" width="16" height="16">
+      <use href="./images/sprite.svg#arrow-rigth"></use>
+    </svg>
   </li>
 </ul>
