--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -35,9 +35,9 @@
       </a>
     </div>
 
-    <!-- <ul class="add-films">
+    <ul class="add-films">
         <li><a href="#" class="add-films-watched">Watched</a></li>
         <li><a href="#" class="add-films-queue">queue</a></li>
-      </ul> -->
+      </ul>
   </div>
 </header>
