--- a/src/sass/utils/_reset.scss
+++ b/src/sass/utils/_reset.scss
@@ -42,7 +42,7 @@ img {
    padding-left: 20px;
    padding-right: 20px;
    @media screen and (min-width: 480px) {
-     max-width: 480px;
+     width: 480px;
    }
 
    @media screen and (min-width: 768px) {
