--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,3 @@
-
-
-  <button type="submit" data-modal-about-open>ТИМЧАСОВО для запуску модалки</button>
-
 <div class="container">
   <div class="movie__modal is-hidden" data-modal-about>
     <button class="movie__close" data-modal-about-close>
@@ -9,7 +5,9 @@
         <use href="./images/sprite.svg#close"></use>
       </svg>
     </button>
-    
+    <div class="movie__modal--render">
+
+    </div>
   </div>
 </div>
 
