--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
   >
   <span class="footer-text"
     >Developed with
-    <svg class="footer-heart" alt="heart beat" width="14px" height="13px">
+    <svg class="footer-heart" alt="heart beat" width="14" height="13">
       <use href="./images/sprite.svg#heart"></use>
     </svg>
     <span class="footer-text"
