--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -27,9 +27,9 @@
     </form>
 
     <div class="header-logo">
-      <a class="header_logo-link" href="/src/index.html">
+      <a class="header_logo-link logo" href="/src/index.html">
         <svg class="header_logo-icon">
-          <use href="/src/images/sprite.svg#film-lg"></use>
+          <use href="/src/images/sprite.svg#icon-film"></use>
         </svg>
         <span class="header-nav_logo-text">Filmoteka</span>
       </a>
