--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -12,7 +12,7 @@
   height: auto;
   /* max-width: 280px; */
   padding: 40px 20px;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -100,7 +100,7 @@ button {
   position: absolute;
   top: 7px;
   right: 7px;
-
+  margin: 0;
   width: 30px;
   height: 30px;
   padding: 0;
@@ -214,25 +214,25 @@ button {
 // }
 // }
 
-// .backdrop-about {
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background-color: rgba(0, 0, 0, .2);
-//     z-index: 20;
-//     transition: .3s all;
+.backdrop-about {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .2);
+    z-index: 20;
+    transition: .3s all;
 
-//     // transition: opacity 250ms linear,
-//     //     visibility 250ms linear;
+    // transition: opacity 250ms linear,
+    //     visibility 250ms linear;
 
-//   &.is-hidden {
-//         opacity: 0;
-//         pointer-events: none;
+  &.is-hidden {
+        opacity: 0;
+        pointer-events: none;
 
-//     }
-// }
+    }
+}
 
 // .movie__modal.is-open {
 //     opacity: 1;
