--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -13,23 +13,23 @@
 
     <form class="form">
       <input
-        class="header_search-input"
+        class="header__search-input"
         placeholder="Movie search"
         name="search"
         autocomplete="off"
         type="text"
       />
-      <button class="header_search-btn" type="submit">
-        <svg class="header_search-btn_icon">
-          <use href="/src/images/sprite.svg#search-lg"></use>
+      <button class="header__search-btn" type="submit">
+        <svg class="header__search-btn_icon">
+          <use href="/src/images/sprite.svg#icon-search"></use>
         </svg>
       </button>
     </form>
 
     <div class="header-logo">
-      <a class="header_logo-link" href="/src/index.html">
+      <a class="header_logo-link logo" href="/src/index.html">
         <svg class="header_logo-icon">
-          <use href="/src/images/sprite.svg#film-lg"></use>
+          <use href="/src/images/sprite.svg#icon-film"></use>
         </svg>
         <span class="header-nav_logo-text">Filmoteka</span>
       </a>
