--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -13,14 +13,14 @@
 
     <form class="form">
       <input
-        class="header__search-input"
+        class="header_search-input"
         placeholder="Movie search"
         name="search"
         autocomplete="off"
         type="text"
       />
-      <button class="header__search-btn" type="submit">
-        <svg class="header__search-btn_icon">
+      <button class="header_search-btn" type="submit">
+        <svg class="header_search-btn_icon">
           <use href="/src/images/sprite.svg#icon-search"></use>
         </svg>
       </button>
