--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -11,8 +11,8 @@
   /* width: 100%; */
   height: auto;
   /* max-width: 280px; */
-  padding: 40px 20px;
-  position: fixed;
+  padding: 40px 15px;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -27,6 +27,7 @@
   //  transition: transform 250ms ease-in-out; 
 
   @media screen and (min-width: 768px) {
+    position: fixed;
     width: 704px;
     padding: 40px 32px;
   }
