--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,15 +1,15 @@
 <footer class="footer">
-  <span class="footer-text footer-copy"
+  <span class="footer__text footer__copy"
     >&copy; 2023 | All Rights Reserved |&nbsp;</span
   >
-  <span class="footer-text"
+  <span class="footer__text"
     >Developed with
-    <svg class="footer-heart" alt="heart beat" width="14" height="13">
+    <svg class="footer__icon" alt="heart beat" width="14" height="13">
       <use href="./images/sprite.svg#heart"></use>
     </svg>
-    <span class="footer-text"
+    <span class="footer__text"
       >by&nbsp;
-      <a class="footer-link link-underline" data-action="open-modal" href="#"
+      <a class="footer__link footer__link--underline" data-action="open-modal" href="#"
         >GoIT Students</a
       ></span
     >
