--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -3,10 +3,10 @@
     <nav>
       <ul class="nav">
         <li class="nav-item home">
-          <a href="./index.html">Home</a>
+          <a href="./index.html" style="color: currentColor">Home</a>
         </li>
         <li class="nav-item library">
-          <a href="./library.html">My Library</a>
+          <a href="./library.html" style="color: currentColor">My Library</a>
         </li>
       </ul>
     </nav>
