--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -3,10 +3,10 @@
     <nav>
       <ul class="nav">
         <li class="nav-item home">
-          <a href="./index.html">Home</a>
+          <a href="./index.html" style="color: currentColor">Home</a>
         </li>
         <li class="nav-item library">
-          <a href="./library.html">My Library</a>
+          <a href="./library.html" style="color: currentColor">My Library</a>
         </li>
       </ul>
     </nav>
@@ -36,8 +36,8 @@
     </div>
 
     <ul class="add-films">
-      <li><a href="#" class="add-films-watched">Watched</a></li>
-      <li><a href="#" class="add-films-queue">queue</a></li>
+      <li><a href="#" class="add-films-watched active-btn">Watched</a></li>
+      <li><a href="#" class="add-films-queue second-btn">queue</a></li>
     </ul>
   </div>
 </header>
