styles on reset and cards update

--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -1,6 +1,6 @@
 .collection {
     @media screen and (min-width: 768px) {
-        width: 768px;
+        // width: 768px;
         display: flex;
         flex-wrap: wrap;
         gap: 32px;
@@ -14,8 +14,8 @@
     }
 }
 .card {
-    margin-left: auto;
-    margin-right: auto;
+    // margin-left: auto;
+    // margin-right: auto;
     width: 280px;
 
     @media screen and (max-width: 767px) {
@@ -26,36 +26,39 @@
     }
 
     @media screen and (min-width: 768px) {
-        flex-basis: calc((100% - 32px) / 2);
-        width: 336px;
+        // flex-basis: calc((100% - 32px) / 2);
+        width: calc((100% - 32px) / 2);
     }
 
     @media screen and (min-width: 1280px) {
-        flex-basis: calc((100% - 32px) / 3);
-        width: 395px;
+        // flex-basis: calc((100% - 32px) / 3);
+        width: calc((100% - 32px * 3) / 3);
     }
 
 }
 
 .card__img {
-    width: auto;
-    height: 440px;
+    display: block;
+    width: 100%;
+    height: 402px;
     object-fit: cover;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 
     @media screen and (min-width: 768px) {
-        width: 336px;
+        // width: 336px;
         height: 455px;
     }
 
     @media screen and (min-width: 1280px) {
-        width: 394px;
+        object-fit: cover;
+        width: 100%;
         height: 574px;
     }
 }
 
 .card__title {
+    padding-top: 10px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -64,7 +67,12 @@
     text-transform: uppercase;
     color: #000000;
 
+    @media screen and (min-width: 768px) {
+        padding-top: 8px;
+    }
+
     @media screen and (min-width: 1280px) {
+        padding-top: 12px;
         font-weight: 500;
         font-size: 20px;
         line-height: 24px;
@@ -84,5 +92,6 @@
         font-size: 20px;
         line-height: 24px;
         color: blue($color: #000000);
+        padding-bottom: 16px;
     }
 }
