--- a/src/partials/modal_students.html
+++ b/src/partials/modal_students.html
@@ -1,6 +1,6 @@
 <div class="footer__backdrop is-hidden">
   <div class="footer__modal">
-    <button class="footer__modal--button">
+    <button class="modal__button">
       <svg
         class="modal__icon"
         aria-label="Close button"
