--- a/src/sass/_modal_students.scss
+++ b/src/sass/_modal_students.scss
@@ -1,4 +1,4 @@
-.footer-backdrop {
+.footer__backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -12,14 +12,14 @@
   z-index: 10;
 }
 
-.footer-backdrop .is-hidden {
+.footer__backdrop .is-hidden {
   opacity: 0;
   transform: scale(0);
   visibility: hidden;
   pointer-events: none;
 }
 
-.footer-modal {
+.footer__modal {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -31,14 +31,31 @@
   padding: 40px;
 
   background-color: $white-color;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  background-image: linear-gradient(
+    to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  );
   // background-position: center;
   // background-repeat: no-repeat;
   // background-size: cover;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-  0px 2px 1px rgba(0, 0, 0, 0.2);
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
   transform: translate(-50%, -50%);
   overflow-y: scroll;
+}
+
+.modal__button {
+  position: absolute;
+  top: 1;
+  left: 1;
+
+  width: 30px;
+  height: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
