--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,14 +1,16 @@
 <ul class="pagination">
   <li class="btn-left">
-    <svg class="btn-left" width="16" height="16">
+    <svg width="16" height="16">
       <use href="./images/sprite.svg#arrow-left"></use>
     </svg>
   </li>
+  <li class="pagination-number second-left"></li>
   <li class="pagination-number first-left"></li>
   <li class="pagination-number current">1</li>
   <li class="pagination-number first-right">2</li>
+  <li class="pagination-number second-right">3</li>
   <li class="btn-right">
-    <svg class="btn-right" width="16" height="16">
+    <svg width="16" height="16">
       <use href="./images/sprite.svg#arrow-rigth"></use>
     </svg>
   </li>
