--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -93,7 +93,7 @@
   background-color: transparent;
   width: 252px;
   height: 100%;
-  padding-left: 14px;
+  padding-left: 15px;
 
   font-family: 'Roboto';
   font-style: normal;
@@ -115,11 +115,15 @@
   @media screen and (min-width: 768px) {
     font-size: 14px;
     line-height: 1.14;
+    width: 90px;
+    padding-left: 0;
   }
 
   @media screen and (min-width: 1280px) {
     font-size: 14px;
     line-height: 1.14;
+    width: 120px;
+    padding-left: 0;
   }
 }
 
