--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="movie__modal is-hidden" data-modal-about>
     <button class="movie__close" data-modal-about-close>
@@ -6,11 +5,6 @@
         <use href="./images/sprite.svg#close"></use>
       </svg>
     </button>
-    <div class="movie__modal--render">
-
-    </div>
-
+    <div class="movie__modal--render"></div>
   </div>
 </div>
-
-<script defer type="module" src="./js/modal.js"></script>
