--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,7 +6,7 @@
 @import './header';
 @import './modal';
 @import './pagination';
-@import './addqueue';
+@import './addqueuebtn';
 @import './cards';
 @import './utils/pagination_2';
 @import './utils/loaders';
