--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,10 +8,52 @@
       <use href="./images/sprite.svg#heart"></use>
     </svg>
     <span class="footer__text"
-      >by&nbsp;
-      <a class="footer__link footer__link--underline" data-action="open-modal" href="#"
-        >GoIT Students</a
-      ></span
+      >by&nbsp; 
+      <a class="footer__link" id="openModal">GoIT Students</a></span
     >
   </span>
+
+
+  
 </footer>
+
+<div class="footer__backdrop" id="backdrop">
+  <div class="footer__modal" id="modal">
+    <button class="modal__button" id="closeModal">
+      <svg
+        class="modal__icon"
+        alt="close button"
+        width="18"
+        height="18"
+      >
+        <use href="/src/images/sprite.svg#icon-close"></use>
+      </svg>
+    </button>
+    <p class="team">United JuniorS</p>
+   
+    </div>
+    <ul class="team__gallery">
+      <!-- <li class="gallery_item">
+        <a class="gallery_link" href="${original}">
+          <img src="/src/images/team/modal-Default-Img.jpg" alt="Stanislav Zaliskyi" class="gallery_img">
+          <h2 class="gallery_name">Stanislav Zaliskyi</h2>
+          <p class="gallery_text">Team Lead</p>
+        </a>
+      </li> 
+      <li class="gallery_item">
+        <a class="gallery_link" href="${original}">
+          <img src="/src/images/team/modal-Default-Img – копія.jpg" alt="Nastya Ovcharenko" class="gallery_img">
+          <h2 class="gallery_name">Nastya Ovcharenko</h2>
+          <p class="gallery_text">Scrum Master</p>
+        </a>
+      </li>   
+      <li class="gallery_item">
+        <a class="gallery_link" href="${original}">
+          <img src="/src/images/team/modal-Default-Img – копія – копія.jpg" alt="Serhii Lytvynenko" class="gallery_img">
+          <h2 class="gallery_name">Serhii Lytvynenko</h2>
+          <p class="gallery_text">Developer</p>
+        </a>
+      </li>      -->
+    </ul>
+  </div>
+</div>
