--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,7 +9,10 @@
 @import './cards';
 @import './utils/pagination_2';
 @import './utils/loaders';
+
+
 @import './footer';
-@import './modal_students';
+@import './footer_modal';
+
 
 
