--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -172,8 +172,8 @@
 
 .header_search-btn_icon {
   position: absolute;
-  top: 2px;
-  left: -3px;
+  top: -6px;
+  right: 5px;
 
   width: 14px;
   height: 14px;
@@ -187,12 +187,13 @@
     width: 16px;
     height: 16px;
 
-    top: 3px;
+    top: -10px;
+    right: 8px;
   }
 
   @media screen and (min-width: 1280px) {
-    top: 5px;
-    left: 7px;
+    top: -12px;
+    right: 8px;
   }
 }
 
