--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,7 +6,7 @@
 @import './header';
 @import './modal';
 @import './pagination';
-@import './addqueuebtn';
+@import './libr_hed_queue';
 @import './cards';
 @import './utils/pagination_2';
 @import './utils/loaders';
