--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -2,11 +2,11 @@
   <div class="header-container">
     <nav>
       <ul class="nav">
-        <li class="nav-item home">
-          <a href="./index.html" style="color: currentColor">Home</a>
+        <li class="nav-item nav-current">
+          <a href="./index.html">Home</a>
         </li>
-        <li class="nav-item library">
-          <a href="./library.html" style="color: currentColor">My Library</a>
+        <li class="nav-item-long nav-second">
+          <a href="./library.html">My Library</a>
         </li>
       </ul>
     </nav>
