--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -36,8 +36,9 @@
     </div>
 
     <ul class="add-films">
-      <li><a href="#" class="add-films-watched active-btn">Watched</a></li>
-      <li><a href="#" class="add-films-queue second-btn">queue</a></li>
+      <li><a href="#" class="active-btn add-films-watched btn" id="btnWatched">Watched</a></li>
+      <li><a href="#" class="add-films-queue btn" id="btnQueued">queue</a></li>
     </ul>
+
   </div>
 </header>
