--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,3 +1,8 @@
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .footer {
   background-color: $footer-bgr;
   text-align: center;
